--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FELIZ PÁSCOA!</title>
     <link rel="stylesheet" href="pascoa.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Feliz Páscoa pra você, {}!</h1>
-    <p></p>
+    <header>
+        <h1>Feliz Páscoa pra você, {}!</h1>
+    </header>
+    
+    <section>    
+        <p></p>
+    </section>
+
+    <footer>
+        <p>Site de Gabriel Henderson para desejar feliz páscoa.</p>
+    </footer>
     <script src="pascoa.js"></script>
 </body>
 </html>
