--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <p></p>
     </section>
 
+    <div onclick="fotos()"> 
+     Aperte aqui.
+    </div>
+
     <footer>
-        <p>Site de Gabriel Henderson para desejar feliz páscoa.</p>
+        <p>Site de <a href="https://github.com/gbHenderson">Gabriel Henderson</a> para desejar feliz páscoa.</p>
     </footer>
     <script src="pascoa.js"></script>
 </body>
